<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/personal_data"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/username"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/username"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/birthdate"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/gift"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/city"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/home"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registered_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:text="@string/registration_date"
            android:textColor="?attr/colorOnBackground"
            app:drawableStartCompat="@drawable/account_circle"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawablePadding="8dp"
            android:text="@string/timezone"
            android:textColor="?attr/colorOnBackground"
            app:drawableStartCompat="@drawable/time"
            app:drawableTint="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registered_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>